styles/pop-up.css
#main{
    display: flex;
}
.modal-open{
    overflow: hidden !important;
  }  
#pop-up{
    height: 100vh;
    background-color: rgba(0,0,0, 0.5);
    width: 100%;
    position: fixed;
    z-index: 2;
    top: 0;
    left: 0;
    align-items: center;
}
.clickDisable{
    pointer-events: none;
}
.pop-up-blanket{
    height: 100%;
    width: 100%;
    position: absolute; 
    z-index: 2;
}
.pop-up-inner{
    height: 100%;
    width: 50%;
    min-width: 780px; 
    background-color: white;
    max-width: 1440px;
    padding: 5%;
    z-index: 3;
    overflow: auto;
}
.pop-up-inner > button{
    position: fixed;
    background: url(../images/exit2.png) no-repeat;
    background-size: contain;
    height: 5em;
    width: 5em;
    opacity: 0.5;
    top: 0;
    right: 0;
    transition: opacity 200ms ease-in-out;
    cursor: pointer;
    z-index:3;
}
.pop-up-inner > button:hover{
    opacity:1;
}
.pop-up-head{
    display:flex;
    flex-direction: row;
    justify-content: space-between;
}
.head-image{
    width: 50%;
    min-height: 250px;
    background-size: contain !important;
    background-position: center !important;
}
.head-text{
    width:45%;
}
.title-text{
    width: 100%;
}
.btns{
    max-width: 8em;
}
.btn{
    position: relative;
    padding:0.6em;
    opacity: 0.8;
    font-family: 'Ubuntu' sans-serif;
    font-size: 80%;
    letter-spacing: 0.075em;
    transition: all 200ms ease-in-out;
    transition-property: transform, opacity;
}
.btn:hover{
    transform: translateX(0.3em);
    opacity: 1;
}
.white-btn{
    border: 1px solid var(--dark);
}
.black-btn{
    background-color: var(--dark);
    color: var(--light);
}
.more-img{
    height:0;
    width: 100%;
    margin: 10% 0;
}


/* 
jamie: 758.1%
portfolio: 363.9
weather: 282.4
 */

